# chords

./: .gitignore  pyproject.toml
chords/types/: __init__.py  accident.py  chord.py  interval.py  letter.py  note.py  tone.py
notebooks/: Untitled.ipynb  tensions.ipynb
test/types/: test_accident.py  test_interval.py  test_letter.py  test_note.py  test_tone.py
